--- a/Week2/Challenge3/styles.css
+++ b/Week2/Challenge3/styles.css
@@ -171,9 +171,7 @@ body {
    padding: 10px 20px;
    border-radius: 10px;
    background-color: beige;
-   /* margin: 10px 30px; */
-
-
+   margin: 10px 20px;
 }
 
 .transport-discounts {
@@ -181,11 +179,8 @@ body {
    padding: 10px 20px;
    border-radius: 10px;
    background-color: beige;
-   /* margin: 10px 20px; */
-   padding:
-
+   margin: 10px 20px;
 }
-
 
 
 
