--- a/Week2/Challenge2/styles.css
+++ b/Week2/Challenge2/styles.css
@@ -6,13 +6,20 @@
     background-color: cornsilk;
     max-width: 900px;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+
 
 }
+
+body {
+    margin-top: 40px;
+}
+
 
 /* 1) Container */
 .container {
     max-width: 800px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 
@@ -44,9 +51,10 @@ h2 {
     /* margin:10px; */
     background-color: white;
     border-radius: 8px;    
-    width: 250px;
+    width: 200px;
     height: 280px;
     border: 2px solid rgb(152, 150, 150);
+    vertical-align: top;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     transition: border-color 0.3s ease; /* smooth border change */
 
@@ -71,14 +79,15 @@ h3 {
 .card img {
     width: 100%;
     height: 60%;
-    border-radius: 8px 8px 0 0;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 
 /* 7) Hover state: change border to green, then make it wigglew */
 .card:hover {
     border-color: red;
-    animation: shake 0.4s ease;
+    animation: wiggle 0.4s ease;
 }
 
 /* 8) Footer */
@@ -90,10 +99,10 @@ h3 {
     font-size: smaller;
   }
 
-@keyframes shake {
-0% { transform: translateX(0); }
-25% { transform: translateX(-4px); }
-50% { transform: translateX(4px); }
-75% { transform: translateX(-4px); }
-100% { transform: translateX(0); }
+@keyframes wiggle {
+0% { transform: rotate(0deg); }
+25% { transform: rotate(3deg); }
+50% { transform: rotate(-3deg); }
+75% { transform: rotate(2deg); }
+100% { transform: rotate(0deg); }
 }
